--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,10 @@ matrix:
       osx_image: xcode9.4
       sudo: required
       env: JAZZY_ELIGIBLE=true
-    - os: osx
-      osx_image: xcode9.4
-      sudo: required
-      env: SWIFT_SNAPSHOT=swift-4.2-DEVELOPMENT-SNAPSHOT-2018-06-04-a
+#    - os: osx
+#      osx_image: xcode9.4
+#      sudo: required
+#      env: SWIFT_SNAPSHOT=swift-4.2-DEVELOPMENT-SNAPSHOT-2018-06-04-a
 
 before_install:
   - git clone https://github.com/IBM-Swift/Package-Builder.git
